hphp/hack/test/typecheck/tconst/cannot_override_tconst.php.exp
File "cannot_override_tconst.php", line 8, characters 14-15:
The assigned type of this type constant is inconsistent with its parent (Typing[4110])
File "cannot_override_tconst.php", line 8, characters 19-21:
Expected int
File "cannot_override_tconst.php", line 4, characters 19-26:
But got arraykey
